# Eidolon

./: README.md  eidolon-test.py  examples.py  pyproject.toml
eidolon/: helpers.py  noise.py  picture.py  scalespaces.py
