[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "eidolon"
version = "0.0.1"
description = "Eidolons: Novel Stimuli for Vision Research"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.0"
dependencies = [
  "numpy>=1.24.3",
  "Pillow>=9.5.0",
]

[project.urls]
"Homepage" = "https://github.com/Amerehei/Eidolon"
"Bug Tracker" = "https://github.com/Amerehei/Eidolon/issues"